--- a/src/pages/signals/components/ChartHeader.module.scss
+++ b/src/pages/signals/components/ChartHeader.module.scss
@@ -9,6 +9,7 @@
   font-weight: 500;
   font-size: rem(15);
   margin-bottom: 0;
+  line-height: rem(33);
 }
 
 .Line {
